force-app/main/default/objects/ID_Search_Log__c/ID_Search_Log__c.object-meta.xml
<CustomObject>
    <label>ID Search Log</label>
    <nameField>
        <label>ID Search Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ID Search Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>