force-app/main/default/objects/ID_Search_Log__c/fields/SA_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>SA_ID_Number__c</fullName>
    <externalId>true</externalId>
    <label>SA ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>